<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WalkingTourCreator</string>
    <string name="title_activity_walk_creator">Route Editor</string>
    <string name="action_settings">Settings</string>
    <string name="CancelButton">Cancel Walk</string>
    <string name="SaveButton">Save Route</string>
    <string name="AddButton">Add Location</string>
    <string name="ConfirmButton">Confirm</string>
    <string name="WalkCreatorTitle">Route Editor</string>
    <string name="CurrentCoordsLabel">Current Coordinates</string>
    <string name="DistanceTravelledLabel">Distance Travelled</string>
    <string name="DynamicCoords">12.2 lng 15.5 lat</string>
    <string name="DynamicDistance">100m</string>
    <string name="title_activity_main_app">MainAppActivity</string>
    <string name="Main_CreateWalk_Button">Create New Route</string>
    <string name="title_activity_walk_details">WalkDetailsActivity</string>
    <string name="WalkDetailsNameLabel">Name</string>
    <string name="WalkDetailsNameTextHint">The name of your new walk</string>
    <string name="WalkDetailsSDLabel">Short Description</string>
    <string name="WalkDetailsNameSDHint">Short description of your walk</string>
    <string name="WalkDetailsLDLabel">Long Description</string>
    <string name="WalkDetailsNameLDHint">Long description of your walk</string>
    <string name="walkDetailsCancelButtonText">Cancel</string>
    <string name="walkDetailsConfirmButtonText">Create</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="UnimplementedOK">OK</string>
    <string name="WalkDetailsInvalidInputMessage">You must give a name, short, and long description for the walk!</string>
    <string name="WalkDetailsInvalidInputName">The name of the walk is too long</string>
    <string name="WalkDetailsInvalidInputShort">The short description of the walk is too long</string>
    <string name="WalkDetailsInvalidInputLong">The long description of the walk is too long</string>
	<string name="WalkDetailsInvalidInputCharacters">One of the inputs contain an illegal character</string>
	<string name="ActivityLocationTimeStamp">Time Stamp</string>
	<string name="ActivityLocationLocationName">Location Name</string>
	<string name="ActivityLocationDescription">Description</string>
	<string name="ActivityLocationAddPicture">Add Picture</string>
	<string name="ActivityLocationLDhint">The name of your current location</string>
	<string name="ActivityLocationDescriptionHint">A description of your current location</string>
	<string name="ActivityWalkCreatorLat">Latitude</string>
	<string name="ActivityWalkCreatorLong">Longitude</string>
	<string name="ActivityWalkCreatorDefaultCoordinates">0.0000000</string>
	<string name="EmptyString"></string>
	
	
</resources>
