<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="436dp"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".WalkDetailsActivity" >
	
	    <EditText
	        android:id="@+id/walkDetailsSDEdit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/walkDetailsSDLabel"
	        android:layout_alignRight="@+id/walkDetailsNameEdit"
	        android:layout_below="@+id/walkDetailsSDLabel"
	        android:layout_marginTop="14dp"
	        android:ems="10"
	        android:hint="@string/WalkDetailsNameSDHint"
	        android:inputType="textMultiLine" />
	
	    <TextView
	        android:id="@+id/walkDetailsNameLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/walkDetailsSDLabel"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="19dp"
	        android:minHeight="20dp"
	        android:text="@string/WalkDetailsNameLabel"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/walkDetailsSDLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/walkDetailsNameEdit"
	        android:layout_marginTop="16dp"
	        android:text="@string/WalkDetailsSDLabel"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/walkDetailsLDLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/walkDetailsSDEdit"
	        android:layout_below="@+id/walkDetailsSDEdit"
	        android:layout_marginTop="17dp"
	        android:text="@string/WalkDetailsLDLabel"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <EditText
	        android:id="@+id/walkDetailsLDEdit"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_below="@+id/walkDetailsLDLabel"
	        android:layout_above="@+id/walkDetailsConfirmButton"
	        android:layout_alignLeft="@+id/walkDetailsLDLabel"
	        android:layout_alignRight="@+id/walkDetailsCancelButton"
	        android:ems="10"
	        android:hint="@string/WalkDetailsNameLDHint"
	        android:inputType="textMultiLine" >

	        <requestFocus />
	    </EditText>

	    <Button
	        android:id="@+id/walkDetailsConfirmButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/walkDetailsLDLabel"
	        android:layout_alignParentBottom="true"
	        android:layout_alignRight="@+id/walkDetailsLDLabel"
	        android:onClick="createWalk"
	        android:text="@string/walkDetailsConfirmButtonText" />

	    <Button
	        android:id="@+id/walkDetailsCancelButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentRight="true"
	        android:layout_toRightOf="@+id/walkDetailsSDLabel"
	        android:onClick="cancel"
	        android:text="@string/walkDetailsCancelButtonText" />

	    <EditText
	        android:id="@+id/walkDetailsNameEdit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/walkDetailsNameLabel"
	        android:layout_below="@+id/walkDetailsNameLabel"
	        android:ems="10"
	        android:hint="@string/WalkDetailsNameTextHint"
	        android:minHeight="20dp"
	        android:minWidth="200dp" >

	        <requestFocus />
	    </EditText>
	
	</RelativeLayout>
</ScrollView>