<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".LocationActivity" >

	    <DigitalClock
	        android:id="@+id/digitalClock1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/textView1"
	        android:layout_alignParentRight="true" />

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/spacer"
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="10dp"
	        android:text="@string/ActivityLocationLocationName"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <EditText
	        android:id="@+id/locationNameEdit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView1"
	        android:layout_alignRight="@+id/digitalClock1"
	        android:layout_below="@+id/textView1"
	        android:ems="10"
	        android:hint="@string/ActivityLocationLDhint" />

	    <TextView
	        android:id="@+id/spacer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/ActivityLocationTimeStamp"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/locationNameEdit"
	        android:layout_below="@+id/locationNameEdit"
	        android:layout_marginTop="10dp"
	        android:text="@string/ActivityLocationDescription"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <EditText
	        android:id="@+id/locationDescriptionEdit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView3"
	        android:layout_alignRight="@+id/digitalClock1"
	        android:layout_below="@+id/textView3"
	        android:layout_marginTop="10dp"
	        android:ems="10"
	        android:hint="@string/ActivityLocationDescriptionHint"
	        android:inputType="textMultiLine"
	        android:maxLength="1000"
	        android:minLines="5" >

	        <requestFocus />
	    </EditText>

	    <Button
	        android:id="@+id/addPicture"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/locationDescriptionEdit"
	        android:layout_below="@+id/locationDescriptionEdit"
	        android:layout_marginTop="10dp"
	        android:layout_toLeftOf="@+id/ConfirmAction"
	        android:onClick="onClickPictureButton"
	        android:text="@string/ActivityLocationAddPicture" />
	    

	    <Button
	        android:id="@+id/ConfirmAction"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/addPicture"
	        android:layout_alignRight="@+id/locationDescriptionEdit"
	        android:layout_below="@+id/locationDescriptionEdit"
	        android:layout_marginTop="10dp"
	        android:layout_toRightOf="@+id/textView1"
	        android:onClick="addLocation"
	        android:text="@string/ConfirmButton" />
	
	</RelativeLayout>
</ScrollView>